--- a/uncontrolledmanifold.kv
+++ b/uncontrolledmanifold.kv
@@ -128,11 +128,13 @@
         opacity: int(root.is_constrained)
         canvas:
             Color:
-                rgb: 1, 0, 1
+                rgb: 0.25, 0.52, 0.95
             Line:
-                width: 2.
-                # Todo: Find less visually overloaded representation.
-                points: self.center_x, self.center_y, self.center_x + int(not root.is_target2_up) * min(self.width, self.height) * 0.25 * df1.value_normalized, self.center_y + int(root.is_target2_up) * min(self.width, self.height) * 0.25 * df2.value_normalized
+                width: 5
+                circle: self.center_x, self.center_y, min(self.width, self.height) * 0.25, 0, (int(not root.target2_switch) * df1.value_normalized + int(root.target2_switch) * df2.value_normalized) * 360
+            Ellipse:
+                size: [min(self.width, self.height) * 0.05] * 2
+                pos: [self.center_x - min(self.width, self.height) * 0.025, self.center_y - min(self.width, self.height) * 0.275]
 
     CountDownLbl:
         id: anim_label
