increase font size

--- a/uncontrolledmanifold.kv
+++ b/uncontrolledmanifold.kv
@@ -16,6 +16,7 @@
             text: root.home_msg
             markup: True
             text_size: root.width, None
+            font_size: sp(24)
             size: self.texture_size
             halign: 'center'
             valign: 'middle'
@@ -46,6 +47,7 @@
             text: root.instruction_msg
             markup: True
             text_size: root.width, None
+            font_size: sp(24)
             size: self.texture_size
             halign: 'center'
             valign: 'middle'
