send data via e-mail

--- a/uncontrolledmanifold.kv
+++ b/uncontrolledmanifold.kv
@@ -204,6 +204,11 @@
             size: self.texture_size
             halign: 'center'
             valign: 'middle'
+        Button:
+            text: _("Send via E-Mail")
+            size_hint_y: 0.2
+            on_release:
+                app.send_email()
         BoxLayout:
             orientation: 'horizontal'
             size_hint_y: 0.2
