--- a/uncontrolledmanifold.kv
+++ b/uncontrolledmanifold.kv
@@ -102,6 +102,8 @@
                 max: 100
                 value: self.max * 0.1
                 orientation: 'vertical'
+                value_track: root.is_constrained and root.target2_switch
+                value_track_color: [0.25, 0.52, 0.95, 1]
                 cursor_image: 'res/sliderhandle_vertical.png'
                 cursor_disabled_image: 'res/sliderhandle_vertical_disabled.png'
                 cursor_size: [sp(64)]*2
@@ -122,6 +124,8 @@
                 max: 100
                 value: self.max * 0.1
                 orientation: 'horizontal'
+                value_track: root.is_constrained and not root.target2_switch
+                value_track_color: [0.25, 0.52, 0.95, 1]
                 cursor_image: 'res/sliderhandle_horizontal.png'
                 cursor_disabled_image: 'res/sliderhandle_horizontal_disabled.png'
                 cursor_size: [sp(64)]*2
