stronger constrained indicator on sliders

--- a/src/uncontrolledmanifold.kv
+++ b/src/uncontrolledmanifold.kv
@@ -100,8 +100,8 @@
             value: self.max * 0.1
             orientation: 'vertical'
             value_track_color: [0.25, 0.52, 0.95, 1]
-            cursor_image: 'res/sliderhandle_vertical.png'
-            cursor_disabled_image: 'res/sliderhandle_vertical_disabled.png'
+            #cursor_image: 'res/sliderhandle_v_on.png'
+            #cursor_disabled_image: 'res/sliderhandle_v_off.png'
             cursor_size: [sp(64)]*2
             padding: sp(48)
             sensitivity: 'handle'
@@ -121,8 +121,8 @@
             value: self.max * 0.1
             orientation: 'vertical'
             value_track_color: [0.25, 0.52, 0.95, 1]
-            cursor_image: 'res/sliderhandle_vertical.png'
-            cursor_disabled_image: 'res/sliderhandle_vertical_disabled.png'
+            #cursor_image: 'res/sliderhandle_v_on.png'
+            #cursor_disabled_image: 'res/sliderhandle_v_off.png'
             cursor_size: [sp(64)]*2
             padding: sp(48)
             sensitivity: 'handle'
