--- a/src/uncontrolledmanifold.kv
+++ b/src/uncontrolledmanifold.kv
@@ -216,7 +216,7 @@
                 id: upload_btn
                 text: _("Upload")
                 disabled: not app.upload_btn_enabled
-                on_release: root.on_update()
+                on_release: root.on_upload()
         BoxLayout:
             orientation: 'horizontal'
             size_hint_y: 0.2
