--- a/src/uncontrolledmanifold.kv
+++ b/src/uncontrolledmanifold.kv
@@ -286,7 +286,7 @@
 
 <SimplePopup>:
     id:pop
-    size_hint: .4, .4
+    size_hint: .6, .6
     auto_dismiss: False
     title: _("Information")
     BoxLayout:
@@ -301,11 +301,12 @@
             valign: 'middle'
         Button:
             text: _("Close")
+            size_hint_y: 0.3
             on_release: pop.dismiss()
 
 <BlockingPopup>:
     id:pop_block
-    size_hint: .4, .4
+    size_hint: .6, .6
     auto_dismiss: False
     title: _("Information")
     BoxLayout:
