--- a/src/uncontrolledmanifold.kv
+++ b/src/uncontrolledmanifold.kv
@@ -1,15 +1,10 @@
-#:kivy 1.10.1
-#:import math math
-
-<RoundedButton@Button>:
-    background_color: 0,0,0,0  # Make invisible.
-    canvas.before:
-        Color:
-            rgba: (.4,.4,.4,1) if self.state=='normal' else (0,.7,.7,1)  # Visual feedback of press.
-        RoundedRectangle:
-            size: [self.size[0]*0.98, self.size[1]*0.9]
-            pos: [self.pos[0]+self.size[0]*0.01, self.pos[1]+self.size[1]*0.05]
-            radius: [30,]
+# uncontrolledmanifold.kv
+#:kivy 1.11.1
+#:include src/widgets/buttons.kv
+#:include src/widgets/popups.kv
+#:include src/widgets/screenconsents.kv
+#:include src/widgets/screeninstructions.kv
+#:include src/widgets/screencircletask.kv
 
 <UCMManager>:
     settings: app.settings
@@ -60,259 +55,6 @@
                     root.manager.transition.duration = 0.5
                     root.manager.current = root.manager.task_consents[app.settings.task]
 
-<ScreenConsentCircleTask>:  # When adding new consent forms, to share style add class like so: <ConsentOne, ConsentTwo>:
-    settings: app.settings
-    on_leave: consent_scroll.scroll_y = 1
-
-    BoxLayout:
-        orientation: 'vertical'
-
-        ScrollView:
-            id: consent_scroll
-            do_scroll_x: False
-            do_scroll_y: True
-
-            GridLayout:
-                cols: 1
-                rows: 2
-                size_hint_y: None
-                height: self.minimum_height
-
-                Label:
-                    text: root.consent_msg
-                    markup: True
-                    text_size: root.width, None
-                    font_size: sp(24)
-                    size: self.texture_size
-                    size_hint_y: None
-                    padding: 10, 10
-                    halign: 'center'
-                    valign: 'top'
-
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y: 0.2
-            RoundedButton:
-                text: _("Decline")
-                on_release:
-                    root.manager.transition.direction = 'up'
-                    root.manager.transition.duration = 0.5
-                    root.manager.go_home()
-            RoundedButton:
-                text: _("Agree")
-                on_release:
-                    root.manager.transition.direction = 'up'
-                    root.manager.transition.duration = 0.5
-                    root.manager.current = root.manager.task_instructions[app.settings.task]
-
-<ScreenInstructCircleTask>:  # When adding new task instruction, to share style add class like so: <TaskOne, TaskTwo>:
-    settings: app.settings
-    on_leave: instruct_scroll.scroll_y = 1
-
-    BoxLayout:
-        orientation: 'vertical'
-
-        ScrollView:
-            id: instruct_scroll
-            do_scroll_x: False
-            do_scroll_y: True
-
-            GridLayout:
-                cols: 1
-                rows: 2
-                size_hint_y: None
-                height: self.minimum_height
-
-                Label:
-                    text: root.instruction_msg
-                    markup: True
-                    text_size: root.width, None
-                    font_size: sp(24)
-                    size: self.texture_size
-                    size_hint_y: None
-                    padding: 10, 10
-                    halign: 'center'
-                    valign: 'top'
-
-                Image:
-                    id: CT_instruct_img
-                    source: 'res/CT_1task_trial.png'
-                    allow_stretch: False
-                    keep_ratio: True
-                    size: self.texture_size
-                    size_hint: (1, None)
-
-        RoundedButton:
-            text: _("Start")
-            size_hint_y: 0.2
-            on_release:
-                root.manager.transition.direction = 'up'
-                root.manager.transition.duration = 0.5
-                root.manager.current = app.settings.task
-
-<ScreenCircleTask>:
-    name: 'Circle Task'
-    count_down: anim_label
-    settings: app.settings
-
-    AnchorLayout:
-        anchor_x: 'left'
-        anchor_y: 'center'
-
-        # Debug Label
-        #Label:
-        #    text: 'df1 = {:.2f}'.format(df1.value)
-        #    size_hint_x: None
-        #    size_hint_y: 0.1
-        #    size: self.texture_size
-        #    pos_hint: {'left': 1}
-        #    canvas.before:
-        #        PushMatrix
-        #        Rotate:
-        #            angle: 90
-        #            origin: self.center
-        #    canvas.after:
-        #        PopMatrix
-
-        ScaleSlider:
-            id: df1
-            min: 0
-            max: 100
-            value: self.max * 0.1
-            orientation: 'vertical'
-            value_track_color: [0.25, 0.52, 0.95, 1]
-            cursor_size: [sp(64)]*2
-            padding: sp(48)
-            sensitivity: 'handle'
-            size_hint: None, 1
-
-    AnchorLayout:
-        anchor_x: 'left'
-        anchor_y: 'bottom'
-
-        Label:
-            id: df1_warning
-            opacity: 1.0
-            text: "[color=ff0000]" + _("Please use this slider.[/color]") + "[/color]"
-            markup: True
-            size_hint_x: None
-            size_hint_y: 0.1
-            size: self.texture_size
-            padding: 10, 10
-            halign: 'center'
-            valign: 'middle'
-
-    AnchorLayout:
-        anchor_x: 'right'
-        anchor_y: 'center'
-
-        # Debug Label
-        #Label:
-        #    text: 'df2 = {:.2f}'.format(df2.value)
-        #    size_hint_x: None
-        #    size_hint_y: 0.1
-        #    size: self.texture_size
-        #    pos_hint: {'right': 1}
-        #    canvas.before:
-        #        PushMatrix
-        #        Rotate:
-        #            angle: 90
-        #            origin: self.center
-        #    canvas.after:
-        #        PopMatrix
-
-        ScaleSlider:
-            id: df2
-            min: 0
-            max: 100
-            value: self.max * 0.1
-            orientation: 'vertical'
-            value_track_color: [0.25, 0.52, 0.95, 1]
-            cursor_size: [sp(64)]*2
-            padding: sp(48)
-            sensitivity: 'handle'
-            size_hint: None, 1
-
-    AnchorLayout:
-        anchor_x: 'right'
-        anchor_y: 'bottom'
-
-        Label:
-            id: df2_warning
-            opacity: 1.0
-            text: "[color=ff0000]" + _("Please use this slider.[/color]") + "[/color]"
-            markup: True
-            size_hint_x: None
-            size_hint_y: 0.1
-            size: self.texture_size
-            padding: 10, 10
-            halign: 'center'
-            valign: 'middle'
-
-    FloatLayout:
-        canvas:
-            Color:
-                rgb: 1, 1, 1
-            Ellipse:
-                size: [(df1.value_normalized + df2.value_normalized) * min(self.width, self.height) * 0.4] * 2
-                pos:
-                    [self.center_x - (df1.value_normalized + df2.value_normalized) * min(self.width, self.height) * 0.2,
-                    self.center_y - (df1.value_normalized + df2.value_normalized) * min(self.width, self.height) * 0.2]
-
-    # Goal Circle Task
-    FloatLayout:
-        canvas:
-            Color:
-                rgba: 0, 0.5, 0, .9
-            Line:
-                width: 2.
-                circle: self.center_x, self.center_y, min(self.width, self.height) * 0.25
-
-    # Goal Circle Task constrained
-    FloatLayout:
-        opacity: int(root.is_constrained)
-        canvas:
-            Color:
-                rgb: 0.25, 0.52, 0.95
-            Line:
-                width: 5
-                circle: self.center_x, self.center_y, min(self.width, self.height) * 0.25, 0, (int(not root.target2_switch) * df1.value_normalized + int(root.target2_switch) * df2.value_normalized) * 360
-            Ellipse:
-                size: [min(self.width, self.height) * 0.05] * 2
-                # Target should be at half of 125=62.5, so that df1=df2. That's an arc of 360°*0.625=225°.
-                # x=r*cos(angle), y=r*sin(angle), add to center position and subtract radius.
-                pos: [(self.center_x + min(self.width, self.height) * 0.25 * math.cos(math.radians(225)))-min(self.width, self.height) * 0.025, (self.center_y + min(self.width, self.height) * 0.25 * math.sin(math.radians(225)))-min(self.width, self.height) * 0.025]
-
-    CountDownCircle:
-        id: anim_label
-        text: str(int(self.start_count - (self.angle*self.start_count//360)))
-        font_size: 50
-        color: [1, 0, 1, 1]
-        canvas:
-            Color:
-                rgba: 0.3, 0, 0.3, 0.7
-            Line:
-                circle: self.center_x, self.center_y, min(self.width, self.height) * 0.4, 0, self.angle % 360
-                width: 5
-
-    AnchorLayout:
-        anchor_x: 'center'
-        anchor_y: 'top'
-        Label:
-            text: root.progress
-            text_size: root.width, None
-            size: self.texture_size
-            halign: 'center'
-            valign: 'middle'
-            size_hint: None, None
-
-    #Debug
-    #FloatLayout:
-    #    Label:
-    #        text: 'Radius = {}'.format(df1.value_normalized + df2.value_normalized)
-    #        pos_hint: {'right': 1}
-    #        color: [0, 1, 1, 1]
-
 <ScreenOutro>:
     name: 'Outro'
     settings: app.settings
@@ -327,9 +69,17 @@
             size: self.texture_size
             halign: 'center'
             valign: 'middle'
+        Label:
+            text: "[b]" + _("Personal Identifier:") + "[/b]\n" + app.settings.user
+            markup: True
+            text_size: root.width, None
+            size: self.texture_size
+            halign: 'center'
+            valign: 'middle'
+
         BoxLayout:
             orientation: 'horizontal'
-            size_hint_y: 0.2
+            size_hint_y: 0.4
             RoundedButton:
                 text: _("Send via E-Mail")
                 disabled: not app.settings.is_email_enabled
@@ -342,7 +92,7 @@
                 on_release: root.on_upload()
         BoxLayout:
             orientation: 'horizontal'
-            size_hint_y: 0.2
+            size_hint_y: 0.4
             RoundedButton:
                 text: _("Home")
                 on_release:
@@ -351,46 +101,3 @@
             RoundedButton:
                 text: _("Quit")
                 on_release: root.manager.quit()
-
-<ScreenWebView>:
-	name: 'Webview'
-	BoxLayout:
-		Label:
-			id: info_label
-			halign: 'center'
-
-<SimplePopup>:
-    id:pop
-    size_hint: .6, .6
-    auto_dismiss: False
-    title: _("Information")
-    BoxLayout:
-        orientation: 'vertical'
-
-        Label:
-            id: pop_text
-            text: root.msg
-            text_size: root.width, None
-            size: self.texture_size
-            halign: 'center'
-            valign: 'middle'
-        RoundedButton:
-            text: _("Close")
-            size_hint_y: 0.3
-            on_release: pop.dismiss()
-
-<BlockingPopup>:
-    id:pop_block
-    size_hint: .6, .6
-    auto_dismiss: False
-    title: _("Information")
-    BoxLayout:
-        orientation: 'vertical'
-
-        Label:
-            id: pop_block_text
-            text: root.msg
-            text_size: root.width, None
-            size: self.texture_size
-            halign: 'center'
-            valign: 'middle'
